# filetaro

./: .eslintrc.cjs  CHANGELOG.md  README.md  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: publish.yml
src/: App.tsx  exampleFile.tsx  index.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AddFilesFromDirectoryDialog.tsx
src/components/Settings/: MenuItem.tsx  Program.tsx  SettingDialog.tsx  Version.tsx
src/components/Splitter/: index.css  index.tsx
src/components/buttons/: AddFile.tsx  TourClose.tsx
src/components/commons/: Loading.tsx
src/components/deletes/: ByTypeCard.tsx  DirectoryBox.tsx  ExtensionCard.tsx  SettingDialog.tsx  TextCard.tsx  TypeCard.tsx
src/components/dialogs/: Sponsors.tsx
src/components/directories/: Card.tsx  CardKbdDialog.tsx
src/components/forms/: IndeterminateCheckbox.tsx  LanguageSelect.tsx
src/components/moves/: DirectoryCard.tsx  DirectoryCardKbdDialog.tsx  DirectorySettingDialog.tsx  Help.tsx  Left.tsx  Right.tsx  SettingDialog.tsx  SlideShow.tsx  SlideShowPreviewElement.tsx
src/components/organizes/: ByExtCard.tsx  ByIncludingTextCard.tsx  Left.tsx  (+8 more)
src/i18n/: index.ts
src/layouts/: Delete.tsx  Move.tsx  Organize.tsx  Rename.tsx  RootLayout.tsx  Slide.tsx
src/pages/: index.tsx
src/router/: index.tsx
src/stores/: index.ts  tauriStore.ts
src/styles/: card.scss  typography.scss
src/types/: i18n.ts  store.ts
src/utils/: file.ts  keyboard.ts  validation.ts
(+46 files in other folders)
